<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>LxQtTaskbarConfiguration</class>
 <widget class="QDialog" name="LxQtTaskbarConfiguration">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>354</width>
    <height>316</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Task Manager Settings</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="WLContentGB">
     <property name="title">
      <string>Taskbar Contents</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QRadioButton" name="fCurrentDesktopRB">
        <property name="text">
         <string>Show windows from current desktop</string>
        </property>
        <attribute name="buttonGroup">
         <string notr="true">wlcB</string>
        </attribute>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="fAllDesktopsCB">
        <property name="text">
         <string>Show windows from all desktops</string>
        </property>
        <attribute name="buttonGroup">
         <string notr="true">wlcB</string>
        </attribute>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="WLApperanceGB">
     <property name="title">
      <string>Taskbar Appearance</string>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="buttonStyleL">
        <property name="text">
         <string>Button style</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="buttonStyleCB"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="buttonWidthL">
        <property name="text">
         <string>Minimum button width</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QSpinBox" name="buttonWidthSB">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimum">
         <number>1</number>
        </property>
        <property name="maximum">
         <number>500</number>
        </property>
       </widget>
      </item>
      <item row="2" column="0" colspan="2">
       <widget class="QCheckBox" name="autoRotateCB">
        <property name="text">
         <string>Auto&amp;rotate buttons when the panel is vertical</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="middleClickCB">
     <property name="text">
      <string>Close on middle-click</string>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttons">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Close|QDialogButtonBox::Reset</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttons</sender>
   <signal>accepted()</signal>
   <receiver>LxQtTaskbarConfiguration</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttons</sender>
   <signal>rejected()</signal>
   <receiver>LxQtTaskbarConfiguration</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <buttongroups>
  <buttongroup name="wlcB"/>
 </buttongroups>
</ui>
